force-app/main/default/objects/RBC_Product__c/RBC_Product__c.object-meta.xml
<CustomObject>
    <label>RBC Product</label>
    <nameField>
        <displayFormat>prod-{0000}</displayFormat>
        <label>Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RBC Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>