force-app/main/default/objects/RBC_Product__c/fields/CMS__c.field-meta.xml
<CustomField>
    <fullName>CMS__c</fullName>
    <description>CMS</description>
    <label>CMS</label>
    <length>7</length>
    <type>Text</type>
</CustomField>