force-app/main/default/objects/RBC_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RBC Products</relationshipLabel>
    <relationshipName>RBC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>