force-app/main/default/objects/RBC_Product__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <label>Transit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08915</fullName>
            </value>
            <value>
                <fullName>99400</fullName>
            </value>
            <value>
                <fullName>93000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>